# snake

./: CMakeLists.txt  ReadMe.md  ResdMe.txt  package.xml
config/: config_controllers.yaml
launch/: Project 2 evaluation.xlsx  gazebo.launch  template_launch.launch
src/: FKandIK.py  FKvalidation.py  HW4_soln.py  IK.py  LateralUndulation.py  LinearProgression.py  LinearPropagation.py  Sidewinding.py
urdf/: my_robot_integration.urdf.xacro
